# FAS-3-Application-Factory

./: .gitignore  LICENSE  README.md  app.py  project.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py  blueprint.py  config.py  models.py
app/routes/: index.py  more.py
app/templates/: index.html  more.html
app/views/: index.py  more.py
templates/: index.html
